Floated text over cleaned-up cookie, made text styling changes, center-alignment still not correct

--- a/fortune-cookie/stylesheets/fortune_styles.css
+++ b/fortune-cookie/stylesheets/fortune_styles.css
@@ -1,4 +1,34 @@
-body {
-  background-image = url("/images/243___fortune_by_wolfc_stock.jpg");
+img {
+  width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  position: absolute;
+  z-index: -1;
+}
 
+p {
+  display: block;
+  text-align: center;
+}
+
+.small-txt {
+  font-size: .7em;
+}
+
+.red-txt {
+  color: #ff0000;
+}
+
+.container {
+  z-index: 100;
+  width: 300px
+  text-align: center;
+  position: absolute;
+  top: 130px;
+  left: 380px
+}
+
+a {
+  text-decoration: none;
 }
